[metadata]
name = srs_sr830
version = 0.0.1
author = James Ball
description = Control a Stanford Research Systems SR830 lock-in amplifier
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/srs_sr830

[options]
packages = find:
install_requires =
    pyvisa
    pyvisa-py
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

